Refactor: Added models examples
